--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "migrate:prod": "npx prisma migrate deploy"
+    "migrate:prod": "npx prisma migrate deploy",
+    "generate": "npx prisma generate",
+    "vercel-build": "npm run generate && npm run migrate:prod"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
