--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "prisma": "^5.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
+    "stripe": "^14.5.0",
     "zod": "^3.22.2"
   },
   "devDependencies": {
