--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "migrate:prod": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
-    "vercel-build": "npm run generate && npm run migrate:prod"
+    "vercel-build": "npm run generate && npm run migrate:prod",
+    "seed": "ts-node scripts/seeder.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
