--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.11",
     "@prisma/client": "^5.2.0",
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cpf-cnpj-validator": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.2.0",
@@ -43,6 +45,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.3",
