--- a/package.json
+++ b/package.json
@@ -21,50 +21,50 @@
     "migrate:prod": "npx prisma migrate deploy",
     "generate": "npx prisma generate",
     "vercel-build": "npm run generate && npm run migrate:prod",
-    "seed": "ts-node scripts/seeder.ts"
+    "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@nestjs/common": "^10.0.0",
-    "@nestjs/core": "^10.0.0",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/jwt": "^10.2.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@nestjs/swagger": "^7.1.11",
-    "@prisma/client": "^5.2.0",
+    "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/swagger": "^7.3.1",
+    "@prisma/client": "^5.13.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cpf-cnpj-validator": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.2.0",
-    "reflect-metadata": "^0.1.13",
+    "prisma": "^5.13.0",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "stripe": "^14.5.0",
-    "zod": "^3.22.2"
+    "stripe": "^15.4.0",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
-    "@nestjs/testing": "^10.0.0",
+    "@nestjs/testing": "^10.3.8",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.6",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.3",
-    "@types/node": "^20.3.1",
-    "@types/supertest": "^2.0.12",
-    "@typescript-eslint/eslint-plugin": "^6.0.0",
-    "@typescript-eslint/parser": "^6.0.0",
-    "eslint": "^8.42.0",
+    "@types/node": "^20.12.7",
+    "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^7.7.1",
+    "@typescript-eslint/parser": "^7.7.1",
+    "eslint": "^9.1.1",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
-    "supertest": "^6.3.3",
+    "supertest": "^7.0.0",
     "ts-jest": "^29.1.0",
     "ts-loader": "^9.4.3",
-    "ts-node": "^10.9.1",
+    "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.4.5"
   },
   "jest": {
     "moduleFileExtensions": [
