--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "build": "npm run migrate:prod && nest build",
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
@@ -29,12 +29,12 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/platform-express": "^10.3.8",
     "@nestjs/swagger": "^7.3.1",
-    "@prisma/client": "^5.13.0",
+    "@prisma/client": "^5.14.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cpf-cnpj-validator": "^1.0.3",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.13.0",
+    "prisma": "^5.14.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "stripe": "^15.4.0",
