--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,20 @@
 {
   "version": 2,
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://lyamarababys.com"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, PUT, DELETE"
+        }
+      ]
+    }
+  ],
   "builds": [
     {
       "src": "src/main.ts",
