fix(vercel.json): update Access-Control-Allow-Origin value to wildcard '*' for broader CORS support

--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "dist/src/main.js",
       "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"],
       "headers": {
-        "Access-Control-Allow-Origin": "https://lyamarababys.com/"
+        "Access-Control-Allow-Origin": "*"
       }
     }
   ]
